--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+*{
+  margin:0
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.app{
+  background-color: #fafafa;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+}
+
+.app__header{
+  background-color: white;
+  border-bottom: 1px solid lightgrey;
+  display:flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.app__headerImage{
+  object-fit: contain;
+  padding:2%;
+  height: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app__signup{
+  display:flex;
+  flex-direction: column;
 }
+
+.app__loginContainer{
+  margin-left:auto;
+  margin-right:10%;
+}
+
